syntax = "proto3";

import "enum.proto";

message LoginResponse {
  AuthenticationState state = 1;
  string passwordResetToken = 2;
  string twoFactorAuthToken = 3;
  string authToken = 4;
  string refreshToken = 5;
}

message GetUserResponse {
  string username = 1;
  string email = 2;
}

message CheckAvailabilityResponse {
  bool available = 1;
}

message ChangeUsernameResponse {
  ChangeUsernameState state = 1;
}

message ChangeEmailResponse {
  ChangeEmailState state = 1;
}

message ChangePasswordResponse {
  ChangePasswordState state = 1;
}

message TwoFactorOption {
  TwoFactorSaveState state = 1;
  int32 id = 2;
  string nickname = 3;
  TwoFactorType twoFactorType = 4;
  string target = 5;
  string code = 6;
}

message MFAOption {
  int32 id = 1;
  string nickname = 2;
  TwoFactorType type = 3;
  string preview = 4;
}

message DeleteTwoFactorResponse {
  DeleteTwoFactorState state = 1;
}

message ApiUser {
  int32 id = 1;
  string username = 2;
  string email = 3;
}

message PageableApiUser {
  int32 total = 1;
  repeated ApiUser results = 2;
}

message ApiForm {
  int32 id = 1;
  string name = 2;
  string slug = 3;
  ProtectionType protectionType = 4;
  string protectionKey = 5;
  NotificationType notificationType = 6;
  int32 digestTime = 7;
  DayPart digestDayPart = 8;
  repeated string domains = 9;
  repeated string notifications = 10;
}

message PageableApiForm {
  int32 total = 1;
  repeated ApiForm results = 2;
}